# shmmp

./: Makefile.in  README.md  aclocal.m4  configure  configure.ac
include/: config.h  config.h.in  shmmp.h  shmmpserver.h
m4/: ax_cxx_check_lib.m4
src/: Makefile.am  Makefile.in  shmmp.cpp
src/examples/interthread/: Makefile.am  Makefile.in  main.cpp
src/lib/: Makefile.am  Makefile.in  crc32.cpp  shmmp.cpp  shmmpserver.cpp
